# sph_simulation

./: Cargo.toml  build.sh  index.html  serve.sh
.github/workflows/: deploy.yml
src/: device_motion.rs  kernel.rs  main.rs
